@@ -3,6 +3,8 @@
 	  Qt 3.x. We now only use it when compiling C files.
 	- Fixed (hopefully definitely) this lousy formatting on both the
 	  external window and console.
+	- Made the main widget display a caption containing the filename of
+	  each model.
 
 * Changes from v1.2 to v1.3 :
 	- Fixed memory allocation bug for non-manifold models in
